infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satoshi-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: satoshi-auth
  template:
    metadata:
      labels:
        app: satoshi-auth
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: satoshi-auth
          image: satoshi_auth:0.0.1
          volumeMounts:
            - mountPath: /usr/src/auth
              name: auth-vol
      volumes:
        - name: auth-vol
          hostPath:
            path: /home/amin/projects/environments/satoshi/src/auth
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: satoshi-auth-srv
spec:
  selector:
    app: satoshi-auth
  type: ClusterIP
  ports:
    - name: satoshi-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
