infra/k8s/data-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satoshi-data-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: satoshi-data
  template:
    metadata:
      labels:
        app: satoshi-data
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: satoshi-data
          image: satoshi_data:0.0.1
          volumeMounts:
            - mountPath: /usr/src/data
              name: data-vol
      volumes:
        - name: data-vol
          hostPath:
            path: /home/amin/projects/environments/satoshi/src/data
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: satoshi-data-srv
spec:
  selector:
    app: satoshi-data
  type: ClusterIP
  ports:
    - name: satoshi-data
      protocol: TCP
      port: 3000
      targetPort: 3000
