infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: satoshi-ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  defaultBackend:
    service:
      name: satoshi-client-srv
      port:
        number: 3000
  rules:
    - host: satoshi.vgdesign.ir
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: satoshi-auth-srv
                port:
                  number: 3000
          - path: /api/data/?(.*)
            pathType: Prefix
            backend:
              service:
                name: satoshi-data-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: satoshi-client-srv
                port:
                  number: 80
